Added peak color to SpectrumChartD3 charting. Fixed a few other issues with SpectrumChartD3. Still night quite ready for primary use, but getting closer (Need peak skewing, non-polynomial continuums, probably a few other things)

--- a/d3_resources/SpectrumChartD3.css
+++ b/d3_resources/SpectrumChartD3.css
@@ -1,7 +1,7 @@
 
 body { font: 13px sans-serif; }
 rect { fill: #fff; }
-label{ margin-left: 5px; }
+.peaklabel{ margin-left: 5px; }
 
 .referenceGammaSelectDiv { display: inline-block; margin-left: 25px; }
 .referenceGammaSelect { width: 200px; height: 130px; }
