Work integrating D3 chart. Got ROI dragging working in JS - in principle; still need to implement c++. Reduced Wt.emit(...) calls from D3 based JS to mostly when actions finish, to maybe be a little more efficient (and hopefully this optimization does come back to byte).

--- a/d3_resources/SpectrumChartD3.css
+++ b/d3_resources/SpectrumChartD3.css
@@ -1,3 +1,31 @@
+/*******************/
+.roiDragBox {
+  fill: #666;
+  fill-opacity: 0.4;
+  stroke-opacity: 0.3;
+  stroke: black;
+  stroke-width: 1px;
+  user-select: none;
+  -moz-user-select: none;
+}
+
+.roiDragLine {
+  fill: none;
+  stroke: black;     /* SHould maybe set line color to be same as axis liens. */  
+  stroke-opacity: 0.1; 
+  stroke-width: 1px;
+}
+
+.roiDragLine .active {
+  stroke-opacity: 0.4;
+}
+
+.roiDragBox .active {
+  stroke-opacity: 0.3;
+}
+
+/*******************/
+
 
 body { font: 13px sans-serif; }
 rect { fill: #fff; }
