--- a/d3_resources/SpectrumChartD3.css
+++ b/d3_resources/SpectrumChartD3.css
@@ -83,12 +83,15 @@
 
 .scalerwidget{ font-size: 1em; }
 .scalerEntry{}
-.scalerback{ fill: rgba(245,245,245,0.5); stroke: rgba(185,185,185,0.80); }
-.activescaler > .scalerback{ fill-opacity: 0.85; }
+.scalerback{
+  fill: none; stroke: none;
+  /* fill: rgba(245,245,245,0.5); stroke: rgba(185,185,185,0.80); */
+}
+.activescaler > .scalerback{ /* fill-opacity: 0.85; */ }
 .scalerheader{ fill: rgba(185,185,185,0.80); fill-opacity: 0.55; }
 .activescaler > g > .scalerheader{ fill: #909090; fill-opacity: 0.95; }
-.scaleraxis{ fill: lightgrey; stroke: grey; }
-.scalertoggle{ fill: lightgrey; stroke: grey; }
+.scaleraxis{  }
+.scalertoggle{  }
 
 .peaklabelarrow {
   stroke-width: 1.5;
