Improve Cmakes handling of D3 resources.

--- a/d3_resources/SpectrumChartD3.css
+++ b/d3_resources/SpectrumChartD3.css
@@ -18,7 +18,9 @@
 }
 /*******************/
 
-
+.chartarea{
+  
+}
 
 
 .yaxis, .yaxislabel { font: sans-serif; font-size: 0.9em; font-weight: lighter; }
