Some cleanup, minor improvements, and add todo to D3 spectrum chart code.

--- a/d3_resources/SpectrumChartD3.css
+++ b/d3_resources/SpectrumChartD3.css
@@ -16,6 +16,16 @@
   fill: none;
   stroke-width: 1px;
 }
+
+
+.roiDragBox.active {
+  /* This class doesnt seem to have any effect... maybe just do it in JS.*/
+  /* fill-opacity: 0.5; */
+}
+.roiDragLine.active {
+  stroke-width: 1.5px;
+}
+
 /*******************/
 
 .chartarea{
