Remove D3 chart axis text font-weight being set to lighter.

--- a/d3_resources/SpectrumChartD3.css
+++ b/d3_resources/SpectrumChartD3.css
@@ -33,8 +33,8 @@
 }
 
 
-.yaxis, .yaxislabel { font: sans-serif; font-size: 0.9em; font-weight: lighter; }
-.xaxis { font: sans-serif; font-size: 0.9em; font-weight: lighter; }
+.yaxis, .yaxislabel { font: sans-serif; font-size: 0.9em; }
+.xaxis { font: sans-serif; font-size: 0.9em; }
 
 .xaxis > .tick > line, .yaxis > .tick, .yaxistick { stroke-width: 1px; }
 
