Rewrite MDA Chi2 chart as a D3.js based chart. Make the MDA tool layout flex, instead of Wt based layout (the reason for doing this was some bad behavior of the spectrum chart continually growing, but as it turns out, this wasn't the problem; I still haven't figured the issue, but going around it by just fixing heights of a few elements).

--- a/d3_resources/SpectrumChartD3.css
+++ b/d3_resources/SpectrumChartD3.css
@@ -32,9 +32,7 @@
   
 }
 
-
-.yaxis, .yaxislabel { font: sans-serif; font-size: 0.9em; }
-.xaxis { font: sans-serif; font-size: 0.9em; }
+.yaxis, .xaxis, .yaxislabel { font: sans-serif; font-size: 0.9em; }
 
 .xaxis > .tick > line, .yaxis > .tick, .yaxistick { stroke-width: 1px; }
 
