--- a/d3_resources/SpectrumChartD3StandAlone.css
+++ b/d3_resources/SpectrumChartD3StandAlone.css
@@ -1,7 +1,7 @@
 /* In order to support custom/dynamic coloring of elements in InterSpec, some
    elements of the spectrum chart cant have stroke/fill defined in the css.
-   This file defines those elements for when you wante to use SpectrumChartD3
-   seperately from InterSpec.
+   This file defines those elements for when you want to use SpectrumChartD3
+   separately from InterSpec.
  */
 
 .chartarea{
@@ -9,7 +9,6 @@
 }
 
 .xaxistitle, .yaxistitle, .yaxis, .xaxis{
-  stroke: black;
 }
 
 
