Small improvements to SpectrumChartD3.js.

--- a/d3_resources/SpectrumChartD3.css
+++ b/d3_resources/SpectrumChartD3.css
@@ -38,6 +38,8 @@
 
 .yaxis, .xaxis, .yaxislabel { font: sans-serif; font-size: 0.9em; }
 
+.SpectrumChartD3 .xaxistitle, .SpectrumChartD3 .yaxistitle{ font-size: 14px; }
+
 .xaxis > .tick > line, .yaxis > .tick, .yaxistick { stroke-width: 1px; }
 
 .xgrid > .tick, .ygrid > .tick{ stroke-opacity: 80%; }
