--- a/d3_resources/SpectrumChartD3.css
+++ b/d3_resources/SpectrumChartD3.css
@@ -162,54 +162,68 @@
 .activescaler > .scalerback{ /* fill-opacity: 0.85; */ }
 .scalerheader{ fill: rgba(185,185,185,0.80); fill-opacity: 0.55; }
 .activescaler > g > .scalerheader{ fill: #909090; fill-opacity: 0.95; }
-.scaleraxis{  }
-.scalertoggle{  }
+  .scaleraxis{  }
+  .scalertoggle{  }
+  
+  
+  .leftbuttonzoombox {
+    fill: #666;
+    fill-opacity: 0.25;
+  }
+  
+  .leftbuttonzoomoutboxy {
+    fill: #666;
+    fill-opacity: 0.1;
+  }
+  .deletePeaksBox {
+    fill: #666;
+    fill-opacity: 0.5;
+  }
+  .countGammasBoxForward {
+    fill: rgba(255,255,0,0.605);
+    fill-opacity: 1;
+  }
+  
+  .sliderBox {
+    user-select: none;
+    -moz-user-select: none;
+  }
+  .sliderDragRegion {
+  }
+  .sliderDragRegionLine {
+  }
+  .sline {
+    fill: none;
+    stroke-width: 0.7px;
+  }
+  .rline {
+    fill: none;
+    stroke-width: 0.5px;
+  }
+  
+  .focus circle {
+    fill: none;
+    stroke: steelblue;
+  }
+  .SpectrumChartD3 .title { font-size: 1.5em; }
+  .SpectrumChartD3 .chart {
+    background-color: #F7F2C5;
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+    height: 500px;
+  }
+  
 
-
-.leftbuttonzoombox {
-  fill: #666;
-  fill-opacity: 0.25;
+g.highlight text {
+  font-size: 1em; /* Same size as .peaklabel */
+  /* TODO: We will set the color and size here... */
+  text-anchor: middle;
+  dominant-baseline: baseline;
 }
-
-.leftbuttonzoomoutboxy {
-  fill: #666;
-  fill-opacity: 0.1;
+  
+g.highlight path {
+  stroke: none;
+  stroke-width: 0px;
 }
-.deletePeaksBox {
-  fill: #666;
-  fill-opacity: 0.5;
-}
-.countGammasBoxForward {
-  fill: rgba(255,255,0,0.605);
-  fill-opacity: 1;
-}
-
-.sliderBox {
-  user-select: none;
-  -moz-user-select: none;
-}
-.sliderDragRegion {
-}
-.sliderDragRegionLine {
-}
-.sline {
-  fill: none;
-  stroke-width: 0.7px;
-}
-.rline {
-  fill: none;
-  stroke-width: 0.5px;
-}
-
-.focus circle {
-  fill: none;
-  stroke: steelblue;
-}
-.SpectrumChartD3 .title { font-size: 1.5em; }
-.SpectrumChartD3 .chart {
-  background-color: #F7F2C5;
-  width: 80%;
-  margin-left: auto;
-  margin-right: auto;
-  height: 500px; 
-}
+  
