Make so clicking on chart x/y titles toggles log/lin or energy chart.
Changed mouse pointer to indicate clicking on title will do something.
Commented out the button that would turn on energy chart, now that a simple click on title will do it (wasnt a fan of an extra few pixels being there - can delete if this seems good).
Fixed touches being able to trigger these toggles.

--- a/d3_resources/SpectrumChartD3.css
+++ b/d3_resources/SpectrumChartD3.css
@@ -65,6 +65,7 @@ svg.SpectrumChartD3 {
 .InterSpecD3Chart text.xaxistitle, 
 .InterSpecD3Chart text.yaxistitle { 
   font-size: 14px; 
+  cursor: pointer;
 }
 
 .InterSpecD3Chart .axis > path, 
@@ -74,10 +75,6 @@ svg.SpectrumChartD3 {
 
 .xaxistitle, .yaxistitle, .yaxis, .yaxislabel, .xaxis, .xaxis > .tick > text, .yaxis > .tick > text {
   fill: var(--d3spec-text-color, black);
-}
-
-.InterSpecD3Chart text.xaxistitle, .InterSpecD3Chart text.yaxistitle {
-  cursor: default;
 }
 
 .InterSpecD3Chart text.xaxistitle:hover, .InterSpecD3Chart text.yaxistitle:hover {
