Fix exporting static SVG of spectrum chart. Add putting GPS into summed spectra. FIx some styling on the chart.

--- a/d3_resources/SpectrumChartD3.css
+++ b/d3_resources/SpectrumChartD3.css
@@ -188,7 +188,10 @@ svg.SpectrumChartD3 {
 .mouseInfo{ font-size: 0.85em;  }
 .mouseInfoBox{ fill: white; fill-opacity: 0.85; }
 
-.peakInfo{ font-size: 0.85em; }
+.peakInfo{
+  font-size: 0.85em;
+}
+
 .peakInfoBox{
   fill: #ffffcc;
   fill-opacity: 1;
@@ -199,13 +202,30 @@ svg.SpectrumChartD3 {
 }
 
 .legend{ font-size: 1em; }
-.legentry{}
+.legentry > tspan {
+  alignment-baseline: middle;
+}
 .legendBack{ fill: rgba(245,245,245,0.5); stroke: rgba(185,185,185,0.80); }
 .activeLegend > .legendBack{ fill-opacity: 0.85; }
 .legendHeader{ fill: rgba(185,185,185,0.80); fill-opacity: 0.55; }
 .activeLegend > g > .legendHeader{ fill: #909090; fill-opacity: 0.95; }
-.d3closebut{ fill: #909090; }
+.d3closebut{ fill: rgba(0,0,0,0); }
 /* .d3closebut:hover{ fill: #4d4d4d; } */
+
+
+/* Adjust size of yellow peak-info box to be smaller on phones. */
+@media screen and (max-device-width: 480px) {
+  .peakInfo{
+    font-size: 0.5em;
+  }
+  .legend{
+    font-size: 0.5em;
+  }
+  
+  .InterSpecD3Chart text.yaxistitle {
+    font-size: 6px;
+  }
+}
 
 .chartLineText {  font-size: 0.8em; font-family: Helvetica, Arial;  font-weight: bold }
 
