--- a/d3_resources/SpectrumChartD3.css
+++ b/d3_resources/SpectrumChartD3.css
@@ -22,6 +22,14 @@ CSS variables InterSpec will define for colors, and line widths:
 --d3spec-second-line-color
 */
 
+/* Text selection control class - replaces global document.onselectstart */
+.spectrum-chart-no-select {
+  user-select: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+}
+
 /*******************/
 svg.SpectrumChartD3 {
   /* This is the <svg> element. */
@@ -194,7 +202,7 @@ svg.SpectrumChartD3 {
   /* fill: var(--d3spec-text-color, black); */
 }
 
-/* This is the box that gives the other kinetic reference candidates */
+/* This is the box that gives the other dynamic reference candidates */
 .refLineCandidatesBackground {
   /* It would be great to use colors defined by global variables, but for the moment we'll 
   just use the same colors as the legend, since they are okay in both light and dark theme.
